RIB-177: fix style